<?xml version="1.0" encoding="utf-8"?>

<!--
/*
 * Wifi Connector
 * 
 * Copyright (c) 2011 Kevin Yuan (farproc@gmail.com)
 * 
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 * 
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 * 
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 * 
 **/ 
-->

<resources>
    <string name="app_name">Wifi Connecter</string>
    
    <string name="toastFailed">Failed!</string>
    <string name="buttonOp">More&#8230;</string>
    
    <!-- Button label to connect to a wifi network-->
    <string name="connect">Connect</string>
    <!--  !!!!!!!! vpn_connect_toTitle of VPN connect dialog -->
    <string name="wifi_connect_to">Connect to %s</string>
    <!-- Wi-Fi IP address label -->    
    <string name="ip_address">IP address</string>
    <!-- Wi-Fi Mac address(BSSID) label -->    
    <string name="mac_address">Mac Address</string>
    <string name="netmask">Subnet Mask</string>
    <string name="gateway">Gateway</string>
    <string name="dns1">DNS1</string>
    <string name="dns2">DNS2</string>
    <string name="crrntConnecsCnt">Connections</string>
    
    <!-- Label for the signal strength -->
    <string name="signal_strength">Strength</string>
    <string name="frequency">Frequency</string>
     <!-- Button caption to forget a wifi network -->
    <string name="forget_network">Forget</string>
    <!-- Label for status of connection -->
    <string name="wifi_status">Status</string>
    <!--Wi-Fi settings screen, summary text for network when connected -->
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting&#8230;</string>
    <!-- Label for link speed (wifi) -->
    <string name="wifi_link_speed">Speed</string>
    <!-- Verbose wifi signal strength.  This is the best out of 4 levels. -->
    <string name="wifi_signal_3">Excellent</string>
    <!-- Verbose wifi signal strength.  This is the 2nd best out of 4 levels. -->
    <string name="wifi_signal_2">Good</string>
    <!-- Verbose wifi signal strength.  This is the 3rd best out of 4 levels. -->
    <string name="wifi_signal_1">Fair</string>
    <!-- Verbose wifi signal strength.  This is the worst out of 4 levels. -->
    <string name="wifi_signal_0">Poor</string>
    <!-- Label for the security of a wifi network -->
    <string name="security">Security</string>
    <!-- Value for the wifi security.  This means no encryption. -->
    <string name="wifi_security_open">Open</string>
    <!-- Value for the wifi security -->
    <string name="wifi_security_wep">WEP</string>
    <!-- Value for the wifi security -->
    <string name="wifi_security_wpa">WPA</string>
    <!-- Value for the wifi security -->
    <string name="wifi_security_wpa2">WPA2</string>
    <!-- Value for the wifi security -->
    <string name="wifi_security_wpa_eap">WPA-EAP</string>
    <!-- Value for the wifi security -->
    <string name="wifi_security_ieee8021x">IEEE8021X</string>

    
    <string name="please_type_passphrase">Password</string>
    <string name="wifi_show_password">Show password.</string>
    
    <string name="wifi_change_password">Change password</string>
    <string name="button_change_password">Modify</string>
    <!-- An edit field's grayed out value when it has not been modified -->
    <string name="wifi_password_unchanged">(unchanged)</string>
    <!-- Button caption to save a configuration wifi -->
    <string name="wifi_save_config">Save</string>
    <string name="cancel">Cancel</string>
    
    <string name="adhoc_not_supported_yet">AdHoc is not supported by Android platform yet!</string>
    
    <string name="dummy_content_description">""</string>
    
    <string name="wifi_fail_to_scan">Can\'t scan for networks</string>
    
    <string name="wifi_empty_list_wifi_off">To see available networks, turn Wi\u2011Fi on.</string>
    
    <string name="wifi_ssid">Network name</string>
    
    <!-- Used in Wi-Fi settings dialogs when Wi-Fi does not have any security. -->
    <string name="wifi_security_none">None</string>

    
    <!-- Do not translate.  Terminology for wifi with both WPA/WPA2 security, or unknown -->
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <!-- Do not translate.  Terminology for wifi with unknown PSK type -->
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <!-- Do not translate.  Concise terminology for wifi with 802.1x EAP security -->
    <string name="wifi_security_eap">802.1x EAP</string>
    
    <string name="color_unspecified">Default</string>
    
    <string name="wifi_failed_connect_message">Failed to connect to network</string>
    <string name="wifi_failed_save_message">Failed to save network</string>
    <string name="wifi_failed_forget_message">Failed to forget network</string>
    <string name="wifi_stopping">Turning off Wi\u2011Fi\u2026</string>
    
    <!-- Do not translate.  Concise terminology for wifi with WEP security -->
    <string name="wifi_security_short_wep">WEP</string>
    <!-- Do not translate.  Concise terminology for wifi with WPA security -->
    <string name="wifi_security_short_wpa">WPA</string>
    <!-- Do not translate.  Concise terminology for wifi with WPA2 security -->
    <string name="wifi_security_short_wpa2">WPA2</string>
    <!-- Do not translate.  Concise terminology for wifi with both WPA/WPA2 security -->
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <!-- Do not translate.  Concise terminology for wifi with unknown PSK type -->
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <!-- Do not translate.  Concise terminology for wifi with 802.1x EAP security -->
    <string name="wifi_security_short_eap">802.1x</string>
    
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_remembered">Saved</string>
    
    <string name="keywords_wifi">wifi wi-fi network connection</string>
    <string name="wifi_settings">Wi\u2011Fi</string>
    
    <string name="confirm">OK</string>

    <string name="start_sync">Start Sync with server</string>>
    <string name="stop_sync">Stop Sync</string>
    <string name="set_server">Set Server</string>
    <string name="sync_stopped">"Sync stopped"</string>>
</resources>
